# OSSC

./: AUTHORS  CMakeLists.txt  Doxyfile_OSSC  LICENSE.txt  README.txt  config.h.cmake.in  mainpage.h  summit.txt
example/bucket/: CMakeLists.txt  create_bucket.c  delete_bucket.c  get_bucket_acl.c  is_bucket_exist.c  list_buckets.c  list_objects_with_bucket_name.c  list_objects_with_prefix.c  list_objects_with_request.c  set_bucket_acl.c
example/miscs/: CMakeLists.txt  generate_presigned_url_with_expiration.c  generate_presigned_url_with_method.c  sync_download.c  sync_upload.c
example/multipart-upload/: CMakeLists.txt  abort_multipart_upload.c  complete_multipart_upload.c  initiate_multipart_upload.c  list_multipart_upload.c  list_parts.c  upload_part.c
example/object/: .put_compressed_object_from_buffer.c.swp  CMakeLists.txt  copy_object.c  copy_object_ext.c  delete_multiple_object.c  delete_object.c  get_compressed_object_to_buffer.c  get_compressed_object_to_file.c  get_object_metadata.c  get_object_to_buffer.c  get_object_to_buffer_2nd.c  get_object_to_file.c  put_compressed_object_from_buffer.c  put_object_from_buffer.c  put_object_from_file.c  put_object_multithreaded.c
example/object-group/: CMakeLists.txt  delete_object_group.c  get_object_group_index.c  get_object_group_to_buffer.c  get_object_group_to_file.c  head_object_group.c  post_object_group.c
src/: CMakeList.txt  CMakeLists.txt  oss_abort_multipart_upload_request.c  oss_bucket.c  oss_bucket.h  oss_client.c  oss_client.h  oss_initiate_multipart_upload_request.c  oss_list_objects_request.c  oss_object_listing.c  oss_object_metadata.c  oss_part_etag.c  oss_upload_part_request.c
src/core/: .client_multipart_upload_operation.c.swp  CMakeLists.txt  client_bucket_operation.c  client_generate_url.c  client_multipart_upload_operation.c  client_object_group_operation.c  client_object_operation.c  oss_client.c  oss_curl_callback.c  oss_helper.c
src/extra/: .CMakeLists.txt.swp  .oss_extra.c.swp  .oss_extra.h.swp  CMakeLists.txt  oss_extra.c  oss_extra.h  oss_sync.c  workqueue.c  workqueue.h
src/lib/: CMakeLists.txt  base64.c  base64.h  hmac-sha1.c  hmac.h  lz4.c  lz4hc.c  md5.c  memxor.c  memxor.h  oss_generate_authentication.c  sha1.c  sha1.h  tstring.c  tstring.h
src/modules/: CMakeLists.txt  oss_abort_multipart_upload_request.c  oss_access_control_list.c  oss_bucket.c  oss_complete_multipart_upload_request.c  oss_complete_multipart_upload_result.c  oss_copy_object_request.c  oss_copy_object_result.c  oss_delete_multiple_object_request.c  oss_generate_presigned_url_request.c  oss_get_object_group_index_result.c  oss_get_object_group_request.c  oss_get_object_request.c  oss_grant.c  oss_initiate_multipart_upload_request.c  oss_initiate_multipart_upload_result.c  oss_list_multipart_uploads_request.c  oss_list_objects_request.c  oss_list_parts_request.c  oss_multipart_object_group.c  oss_multipart_upload.c  oss_multipart_upload_listing.c  oss_object.c  oss_object_group_item.c  oss_object_listing.c  oss_object_metadata.c  oss_object_summary.c  oss_owner.c  oss_part_etag.c  oss_part_listing.c  oss_part_summary.c  oss_post_object_group_request.c  oss_post_object_group_result.c  oss_put_object_result.c  oss_response_header_overrides.c  oss_upload_part_request.c  oss_upload_part_result.c
src/util/: CMakeLists.txt  oss_auth.c  oss_common.c  oss_compression.c  oss_decompression.c  oss_map.c  oss_time.c  oss_time.h  oss_tstring.c  oss_ttxml.c
test/: CMakeLists.txt  abort-multipart-upload-request-t.c  access-control-list-t.c  access_control_list-t.c  bucket-t.c  client-t.c  client_list_objects_with_prefix-t.c  complete-multipart-upload-request-t.c  complete-multipart-upload-result-t.c  copy-object-request-t.c  copy-object-result-t.c  generate-authentication-t.c  generate-presigned-url-request-t.c  get-object-request-t.c  grant-t.c  initiate-multipart-upload-request-t.c  initiate-multipart-upload-result-t.c  list-multipart-uploads-request-t.c  list-objects-request-t.c  list-parts-request-t.c  multipart-upload-listing-t.c  multipart-upload-t.c  object-listing-t.c  object-metadata-t.c  object-summary-t.c  object-t.c  part-etag-t.c  part-listing-t.c  part-summary-t.c  put-object-result-t.c  response-header-overrides-t.c  time-t.c  tstring-tst.c  upload-part-request-t.c  upload-part-result-t.c
test/abort-multipart-upload-request/: .main.c.swp  .oss_abort_multipart_upload_request.c.swp  Makefile  main.c  oss_abort_multipart_upload_request.c  oss_abort_multipart_upload_request.h
test/access_control_list/: CMakeLists.txt  Makefile  main.c  oss_access_control_list.c  oss_grant.c  oss_grant.h  oss_owner.c  oss_owner.h
test/bucket/: Makefile  main  main.c  oss_bucket.c  oss_bucket.h  oss_owner.c  oss_owner.h
test/complete-multipart-upload-request/: .oss_complete_multipart_upload_request.h.swp  Makefile  main  main.c  oss_complete_multipart_upload_request.c  oss_complete_multipart_upload_request.h
test/complete-multipart-upload-result/: Makefile  main  oss_complete_multipart_upload_result.c  oss_complete_multipart_upload_result.h
test/copy-object-request/: Makefile  main.c  oss_copy_object_request.c  oss_copy_object_request.h  oss_map.c  oss_map.h  oss_object_metadata.c
test/copy-object-result/: Makefile  main  main.c  oss_copy_object_result.c  oss_copy_object_result.h
test/delete-multiple-objects/: .main.c.swp  Makefile  main.c  oss_delete_multiple_object_request.c  oss_delete_multiple_object_request.h
test/dummy/: CMakeLists.txt  client_extra_put_object-t.c  client_get_object-t.c  client_put_object-t.c  compression-t.c  decompression-t.c
test/generate-authentication/: Makefile  base64.c  base64.h  generate_authentication.c  generate_authentication.h  hmac.h  main.c  md5.h  oss_constants.h  test-base64.c  test-constants.c  test-hmac-sha1.c  test-sha1.c
test/generate-presigned-url-request/: .oss_generate_presigned_url_request.c.swp  Makefile  main  main.c  oss_generate_presigned_url_request.c  oss_generate_presigned_url_request.h  oss_response_header_overrides.h
test/get-object-group-index/: Makefile  (+6 more)
(+579 files in other folders)
